<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.SwipeRefreshLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <!--layout to show news data-->
            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:background="#1A111111"
                android:layout_alignTop="@+id/progressBar">

            </android.support.v7.widget.RecyclerView>

            <!--progress bar icon-->
            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/progress_bar"/>
            <!--layout to show save message-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:id="@+id/saveNewsLayout">
                <TextView
                    android:id="@+id/emptySaveView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#ffffff"
                    android:text="@string/noSave"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:paddingTop="20dp"
                    android:paddingBottom="30dp"/>
            </LinearLayout>
            <!--layout to show save message-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:id="@+id/bookmarkLayout">
                <TextView
                    android:id="@+id/emptyBookmarkView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#ffffff"
                    android:text="@string/noBookmark"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:paddingTop="20dp"
                    android:paddingBottom="30dp"/>
            </LinearLayout>
            <!-- to show the network error message-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:id="@+id/connectionErrorLayout">
                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="50dp"
                    android:src="@drawable/ic_portable_wifi_off_black"
                    android:contentDescription="@string/connectionError" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="28dp"
                    android:text="@string/connectionError"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="28dp"
                    android:text="@string/internetConnection"
                    android:textAlignment="center" />
                <Button
                    android:id="@+id/retryBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/retry"
                    android:layout_gravity="center"/>
            </LinearLayout>
        </RelativeLayout>
    </android.support.v4.widget.SwipeRefreshLayout>

</RelativeLayout>