<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:clipToPadding="false"
            app:cardUseCompatPadding="false"
            card_view:cardCornerRadius="4dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:background="@drawable/ripple_effect_card_view"
            android:id="@+id/cardView"
            android:focusable="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="vertical"
                android:id="@+id/mainLinearLayout">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:id="@+id/linearLayoutLeft"
                    tools:ignore="UselessParent">
                    <ImageView
                        android:id="@+id/newsImgArea"
                        android:layout_height="match_parent"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:transitionName="goToReadNews"
                        android:scaleType="centerCrop"
                        android:src="@drawable/img_placeholder"
                        android:background="#EEEDDD"
                        tools:targetApi="lollipop"
                        android:contentDescription="@string/content_desc" />
                    <LinearLayout
                        android:layout_height="match_parent"
                        android:layout_width="0dp"
                        android:orientation="vertical"
                        android:layout_weight="1.5"
                        android:background="#0D111111"
                        android:id="@+id/linearLayoutRight">

                        <TextView
                            android:id="@+id/titleArea"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:fontFamily="@font/old_standard_tt"
                            android:hint="@string/title"
                            android:paddingStart="10dp"
                            android:paddingTop="10dp"
                            android:paddingEnd="10dp"
                            android:textStyle="bold"
                            android:layout_weight="3"
                            android:lineSpacingMultiplier="1.1"
                            android:lineSpacingExtra="2dp"
                            tools:ignore="NestedWeights,RtlSymmetry" />

                        <TextView
                            android:id="@+id/postedBy"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:textSize="14sp"
                            android:paddingStart="10dp"
                            android:paddingTop="10dp"
                            android:layout_weight="1.2"
                            android:textColor="@color/colorPrimaryDark"
                            android:fontFamily="@font/old_standard_tt"
                            android:hint="@string/author_name"
                            tools:ignore="NestedWeights,RtlSymmetry" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>